--- a/index.html
+++ b/index.html
@@ -287,22 +287,28 @@ Pero si deseas hacernos un regalo, te compartimos nuestra <br>lista de deseos qu
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/img/fotos1.jpeg" class="d-block w-100" alt="...">
+                <img src="./assets/img/fotos1.jpeg" class="w-100 imagen-horizontal" alt="...">
+                <img src="./assets/img/fotos7.jpeg" class="w-100 imagen-vertical" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/fotos2.jpeg" class="d-block w-100" alt="...">
+                <img src="./assets/img/fotos2.jpeg" class="w-100 imagen-horizontal" alt="...">
+                <img src="./assets/img/fotos8.jpeg" class="w-100 imagen-vertical" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/fotos3.jpeg" class="d-block w-100" alt="...">
+                <img src="./assets/img/fotos3.jpeg" class="w-100 imagen-horizontal" alt="...">
+                <img src="./assets/img/fotos9.jpeg" class="w-100 imagen-vertical" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/fotos4.jpeg" class="d-block w-100" alt="...">
+                <img src="./assets/img/fotos4.jpeg" class="w-100 imagen-horizontal" alt="...">
+                <img src="./assets/img/fotos10.jpeg" class="w-100 imagen-vertical" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/fotos5.jpeg" class="d-block w-100" alt="...">
+                <img src="./assets/img/fotos5.jpeg" class="w-100 imagen-horizontal" alt="...">
+                <img src="./assets/img/fotos11.jpeg" class="w-100 imagen-vertical" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/fotos6.jpeg" class="d-block w-100" alt="...">
+                <img src="./assets/img/fotos6.jpeg" class="w-100 imagen-horizontal" alt="...">
+                <img src="./assets/img/fotos12.jpeg" class="w-100 imagen-vertical" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev sinhover" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
