--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <h1 class="titulo-lugar">Centro de Eventos<br>Casa Bertullini</h1>
             </div>
             <p class="direccion">
-                Camino Luis Cruz Martínez 1600, Pudahuel 
+                Camino Luis Cruz Martínez 1600, Pudahuel. 
             </p>
             <a href="https://www.google.com/maps/place/Cam.+Luis+Cruz+Mart%C3%ADnez+1600,+Pudahuel,+Regi%C3%B3n+Metropolitana/@-33.3858344,-70.864766,18.54z/data=!4m15!1m8!3m7!1s0x9662eb03a00a9223:0xd0fd087640214b3e!2sCam.+Luis+Cruz+Mart%C3%ADnez+1600,+Pudahuel,+Regi%C3%B3n+Metropolitana!3b1!8m2!3d-33.3856636!4d-70.8639365!16s%2Fg%2F11c2fm3mpd!3m5!1s0x9662eb03a00a9223:0xd0fd087640214b3e!8m2!3d-33.3856636!4d-70.8639365!16s%2Fg%2F11c2fm3mpd?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D" 
             target="_blank" class="btn-mapa">Ver el Mapa</a>
@@ -137,7 +137,7 @@
             </div>
 
             <p class="texto">
-                Nos encantaría verte con tu pinta más elegante!<br>
+                Nos encantaría verte <br class="saltoLinea" >con tu pinta más elegante! <br>
                 Y por favor evita los colores blanco, rojo, negro y burdeo.
             </p>
 
@@ -269,7 +269,7 @@ Pero si deseas hacernos un regalo, te compartimos nuestra <br>lista de deseos qu
 
             <p class="texto">
                 Nos encantaría ver todas las fotos y videos que captures de<br>
-                nuestro gran día, no te olvides de subirlas a nuestro álbum digital
+                nuestro gran día, no te olvides de subirlas a nuestro álbum digital.
             </p>
             <a  id="btn-agregar-fotos" class="btn-fotos">Subir Fotos</a>
 
